--- a/RealEngine/RealEngine.vcxproj.filters
+++ b/RealEngine/RealEngine.vcxproj.filters
@@ -93,6 +93,8 @@
     <ClInclude Include="imgui\imgui.h">
       <Filter>Sources\Imgui</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="JsonParser.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleAudio.cpp">
@@ -161,5 +163,9 @@
     <ClCompile Include="imgui\imgui_demo.cpp">
       <Filter>Sources\Imgui</Filter>
     </ClCompile>
+    <ClCompile Include="JsonParser.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="RealEngine.rc" />
   </ItemGroup>
 </Project>
