--- a/RealEngine/RealEngine.vcxproj.filters
+++ b/RealEngine/RealEngine.vcxproj.filters
@@ -95,6 +95,9 @@
     </ClInclude>
     <ClInclude Include="resource.h" />
     <ClInclude Include="JsonParser.h" />
+    <ClInclude Include="ModuleEditor.h">
+      <Filter>Sources\Modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleAudio.cpp">
@@ -164,6 +167,9 @@
       <Filter>Sources\Imgui</Filter>
     </ClCompile>
     <ClCompile Include="JsonParser.cpp" />
+    <ClCompile Include="ModuleEditor.cpp">
+      <Filter>Sources\Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="RealEngine.rc" />
