Added Some config Options
+ added all libraries to solution
Working on config

--- a/Output/imgui.ini
+++ b/Output/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=7,32
 Size=400,400
 Collapsed=0
 
@@ -24,7 +24,17 @@ Size=209,73
 Collapsed=0
 
 [Window][Welcome to our Engine!]
-Pos=40,35
+Pos=217,123
 Size=339,226
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=49,19
+Size=570,109
+Collapsed=0
+
+[Window][About us]
+Pos=49,19
+Size=545,341
 Collapsed=0
 
