Added app and windows functions
TODO:
-Active
-FullScreenDesktop

--- a/Output/imgui.ini
+++ b/Output/imgui.ini
@@ -1,10 +1,10 @@
 [Window][Debug##Default]
-Pos=4,35
+Pos=7,29
 Size=407,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=10,10
+Pos=18,22
 Size=550,680
 Collapsed=0
 
@@ -36,5 +36,10 @@ Collapsed=0
 [Window][About us]
 Pos=167,34
 Size=545,341
+Collapsed=0
+
+[Window][Configuration]
+Pos=4,29
+Size=447,533
 Collapsed=0
 
