--- a/Output/imgui.ini
+++ b/Output/imgui.ini
@@ -39,7 +39,12 @@ Size=545,341
 Collapsed=0
 
 [Window][Configuration]
-Pos=4,29
+Pos=21,29
 Size=447,533
+Collapsed=0
+
+[Window][Console]
+Pos=545,70
+Size=520,457
 Collapsed=0
 
