--- a/Output/imgui.ini
+++ b/Output/imgui.ini
@@ -39,12 +39,17 @@ Size=545,341
 Collapsed=0
 
 [Window][Configuration]
-Pos=21,29
+Pos=18,54
 Size=447,533
 Collapsed=0
 
 [Window][Console]
-Pos=21,374
+Pos=473,360
 Size=520,224
+Collapsed=0
+
+[Window][Inspector]
+Pos=1003,360
+Size=148,222
 Collapsed=0
 
