--- a/RealEngine/RealEngine.vcxproj.filters
+++ b/RealEngine/RealEngine.vcxproj.filters
@@ -70,6 +70,9 @@
     <Filter Include="Libraries\JSON">
       <UniqueIdentifier>{8dbf9895-1f96-42c9-bd48-5f7e52907082}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Sources\Components">
+      <UniqueIdentifier>{7166422a-b36f-4586-9d2d-acb9019d75e9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Module.h">
@@ -421,6 +424,12 @@
     <ClInclude Include="VidMemViaDDraw.h">
       <Filter>Sources\Tools</Filter>
     </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Sources\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>Sources\GameObjects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleAudio.cpp">
@@ -744,6 +753,12 @@
     </ClCompile>
     <ClCompile Include="VidMemViaDDraw.cpp">
       <Filter>Sources\Tools</Filter>
+    </ClCompile>
+    <ClCompile Include="Component.cpp">
+      <Filter>Sources\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>Sources\GameObjects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
