creating ModuleScene and SceneWindow

--- a/Output/imgui.ini
+++ b/Output/imgui.ini
@@ -39,17 +39,22 @@ Size=539,341
 Collapsed=0
 
 [Window][Configuration]
-Pos=888,111
-Size=290,417
+Pos=911,384
+Size=290,300
 Collapsed=0
 
 [Window][Console]
-Pos=224,474
+Pos=352,456
 Size=556,229
 Collapsed=0
 
 [Window][Inspector]
-Pos=7,31
-Size=195,373
+Pos=1001,259
+Size=195,122
+Collapsed=0
+
+[Window][Hierarchy]
+Pos=1031,20
+Size=166,235
 Collapsed=0
 
