Created Primitives Library

--- a/Output/imgui.ini
+++ b/Output/imgui.ini
@@ -49,17 +49,22 @@ Size=556,252
 Collapsed=0
 
 [Window][Inspector]
-Pos=1009,253
+Pos=1003,256
 Size=195,122
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=1030,15
+Pos=1028,18
 Size=166,235
 Collapsed=0
 
 [Window][Create Primitives]
 Pos=1,412
 Size=365,309
+Collapsed=0
+
+[Window][Primitives]
+Pos=31,295
+Size=234,342
 Collapsed=0
 
